# AIRTUK_GNN

./: GNN_Tutorial_AIRTUK.ipynb  README.md  main.py  pyproject.toml
GNN-4-CFD/: graph.py  model.py
GNN-4-CFD/nn/: __init__.py  model.py
GNN_4_CFD/: __init__.py  cfd_dataset.py  metrics.py
GNN_4_CFD/nn/: GNN_Architect.py  UniversalGNN.py  __init__.py  losses.py  model.py
GNN_4_CFD/transforms/: __init__.py
checkpoints/: GNN_S1_B4_H128_T01.chk
logs/GNN_S1_B4_H128_T01/: events.out.tfevents.1770027733.e-u24l854417sh.1012386.0
