[project]
name = "airtuk-gnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "scipy>=1.17.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "torchvision>=0.24.1",
    "vtk>=9.5.2",
]
